site düzenlemesi vol3 devamke

--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -47,23 +47,15 @@
 				<div class="col-xl-9 col-lg-7 col-md-3">
 					<div class="main-menu">
 						<ul id="mobilemenu">
-							<li class="menu-icon"><a href="#">Anasayfa</a>
-								<ul class="submenu">
-									<li><a href="index.html"><i class="flaticon-double-right-arrows-angles"></i> Home style 1</a>
-									</li>
-								</ul>
+							<li class=""><a href="#Anasayfa">Anasayfa</a>
+								
 							</li>
-							<li class="menu-icon"><a href="#">Faaliyet Alanlarımız</a>
-								<ul class="submenu">
-									<li><a href="services-1.html"><i class="flaticon-double-right-arrows-angles"></i> Services-1</a>
-									</li>
-									<li><a href="services-2.html"><i class="flaticon-double-right-arrows-angles"></i> Services-2</a>
-									</li>
-								</ul>
+							<li class=""><a href="#Faaliyet">Faaliyet Alanlarımız</a>
+								
 							</li>
-							<li class="menu-icon"><a href="contact.html">Hakkımızda</a></li>
+							<li class=""><a href="#Hakkimizda">Hakkımızda</a></li>
 						 
-							<li class="menu-icon"><a href="contact.html">İletişim</a></li>
+							<li class=""><a href="contact.html">İletişim</a></li>
 						</ul>
 					</div>
 				</div>
@@ -149,11 +141,12 @@
 				<div class="col-xl-6 col-lg-6">
 					<div class="s-table">
 						<div class="s-tablec">
-							<div class="section-title section-title-right"> <span class="section-top">// Hakkımızda</span>
+							<div class="section-title section-title-right"> <span class="section-top">Hakkımızda</span>
 								<h2>Safa Hukuk Bürosu</h2>
+								<p>Safa hukuk bürosu olarak tecrübeli kadromuzla hizmetinizdeyiz. 25 yıllık tecrübemiz ve kazanma alışkanlığımızın yanı sıra kaliteli hizmeti uygun fiyatlandırma politikamızla sizlere sunuyoruz.</p>
 								<p class="pt-30 pb-35"></p>
 								<div class="about-buttom d-sm-flex">
-									<div class="about-btn"> <a class="attoyer-btn all-btn mr-100" href="#">Daha fazlası için tıklayın</a>
+									<div class="about-btn"> <a class="attoyer-btn all-btn mr-100" href="#Ulasin">Bize Ulaşın</a>
 									</div>
 									
 								</div>
@@ -181,7 +174,7 @@
 							<div class="icon"><i class="flaticon-call"></i>
 							</div>
 							<div class="solution-number">
-								<p>0541 540 9232</p>
+								<p>0537 329 3216 / 0541 540 9232</p>
 							</div>
 						</div>
 					</div>
@@ -197,7 +190,7 @@
 			<div class="row">
 				<div class="col-xl-12 col-lg-12">
 					<div class="section-title"> <span class="section-top"></span>
-						<h2>Faaliyet Alanlarımız</h2>
+						<a name="Faaliyet"><h2>Faaliyet Alanlarımız</h2></a>
 					</div>
 				</div>
 			</div>
@@ -472,50 +465,10 @@
 	<div class="counter-area section-padding">
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-3 col-lg-3 col-md-6 md-mb-30">
-					<div class="counter-item">
-						<ul class="d-inline-flex align-items-center">
-							<li><i class="flaticon-court"></i>
-							</li>
-							<li><span class="counter">72</span>
-								<p>Case Done</p>
-							</li>
-						</ul>
-					</div>
+				<div class="col-xl-12 col-lg-12 col-md-15 md-mb-30">
+					<h1 style="color: white;">Sizin için burdayız. Kaliteli hizmet için hemen bize ulaşın!</h1>
 				</div>
-				<div class="col-xl-3 col-lg-3 col-md-6">
-					<div class="counter-item">
-						<ul class="d-inline-flex align-items-center">
-							<li><i class="flaticon-presentation"></i>
-							</li>
-							<li><span class="counter">59</span>
-								<p>Happy Client’s</p>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-xl-3 col-lg-3 col-md-6 sm-mt-30 sm-mb-30">
-					<div class="counter-item">
-						<ul class="d-inline-flex align-items-center">
-							<li><i class="flaticon-law"></i>
-							</li>
-							<li><span class="counter">42</span>
-								<p>Case Dismissed</p>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-xl-3 col-lg-3 col-md-6">
-					<div class="counter-item">
-						<ul class="d-inline-flex align-items-center">
-							<li><i class="flaticon-balance"></i>
-							</li>
-							<li><span class="counter">92</span>
-								<p>Charges Dropped</p>
-							</li>
-						</ul>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
@@ -532,7 +485,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-7 col-lg-8">
-					<div class="section-title-left"> <span class="section-top">// Neden Safa Hukuk ? </span>
+					<div class="section-title-left"> <span class="section-top">Neden Safa Hukuk ? </span>
 						<h2 class="mb-55">Neden bizi tercih etmelisiniz ?</h2>
 						<div class="row">
 							<div class="col-lg-6 col-md-6 mb-40">
@@ -551,7 +504,7 @@
 									</div>
 									<div class="choose-content">
 										<h3>Hızlı ve Kaliteli </h3>
-										<p>Sizler için kaliteden ödün vermeden hızlı bir hizmet sunuyoruzç</p>
+										<p>Sizler için kaliteden ödün vermeden hızlı bir hizmet sunuyoruz.</p>
 									</div>
 								</div>
 							</div>
@@ -595,7 +548,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-6 col-lg-6">
-					<div class="section-title-left"> <span class="section-top">// Bize Ulaşın</span>
+					<div class="section-title-left"> <a name="Ulasin"><span class="section-top">Bize Ulaşın</span></a>
 						<h2 class="mb-60">Ücretsiz Danışmanlık </h2>
 						<div class="from-area">
 							<form #loginForm="ngForm" (submit)="getValues(loginForm.value)">
