contact üst kisim duzenlendi

--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -23,7 +23,7 @@
 				<div class="col-xl-12 col-lg-12 col-md-14">
 					<div class="top-left d-i-block">
 						<ul>
-							<li><a href="#"><i class=""></i></a>Ömerağa Mah. Alemdar Cad. Beyazhan İşhanı no 43 İzmit Kocaeli</li>
+							<li><a href="#"><i class=""></i></a>Ömerağa Mah. Alemdar Cad. Beyazhan İşhanı No:43 İzmit Kocaeli</li>
 							<li><a href="#"><i class="flaticon-call"></i></a> 0537 329 3216 / 0541 540 9232</li>
 							<li><a href="#"><i class="flaticon-envelope"></i></a> safahukuk@yahoo.com</li>
 						</ul>
@@ -55,7 +55,7 @@
 							</li>
 							<li class=""><a href="#Hakkimizda">Hakkımızda</a></li>
 						 
-							<li class=""><a href="contact.html">İletişim</a></li>
+							<li class=""><a href="contact">İletişim</a></li>
 						</ul>
 					</div>
 				</div>
