--- a/hukuki/src/app/contact/contact.component.html
+++ b/hukuki/src/app/contact/contact.component.html
@@ -14,30 +14,16 @@
 	<div class="top-bar">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-xl-6 col-lg-6 col-md-8">
+				<div class="col-xl-12 col-lg-12 col-md-14">
 					<div class="top-left d-i-block">
 						<ul>
-							<li><a href="#"><i class="flaticon-call"></i></a> +(141 - 589 - 548</li>
-							<li><a href="#"><i class="flaticon-envelope"></i></a> infoattoyer@gmail.com</li>
+							<li><a href="#"><i class=""></i></a>Ömerağa Mah. Alemdar Cad. Beyazhan İşhanı No:43 İzmit Kocaeli</li>
+							<li><a href="#"><i class="flaticon-call"></i></a> 0537 329 3216 / 0541 540 9232</li>
+							<li><a href="#"><i class="flaticon-envelope"></i></a> safahukuk@yahoo.com</li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-xl-6 col-lg-6 col-md-4">
-					<div class="top-right d-i-block text-right">
-						<ul>
-							<li><a href="#"><i class="flaticon-facebook-app-symbol"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-twitter"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-linkedin"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-vimeo"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-instagram"></i></a>
-							</li>
-						</ul>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
@@ -46,114 +32,31 @@
 	<div class="header-menu">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-xl-2 col-lg-2 col-md-7">
+				<div class="col-xl-3 col-lg-3 col-md-8">
 					<div class="menu-logo">
-						<a href="index.html">
-							<img src="../../assets/img/logo.png" alt="">
-						</a>
+						<h1>Safa Hukuk </h1>
 					</div>
 					<div class="responsive-menu"></div>
 				</div>
-				<div class="col-xl-9 col-lg-9 col-md-2">
+				<div class="col-xl-9 col-lg-7 col-md-3">
 					<div class="main-menu">
 						<ul id="mobilemenu">
-							<li class="menu-icon"><a href="#">Home</a>
-								<ul class="submenu">
-									<li><a href="index.html"><i class="flaticon-double-right-arrows-angles"></i> Home style 1</a>
-									</li>
-								</ul>
+							<li class=""><a href="#Anasayfa">Anasayfa</a>
+								
 							</li>
-							<li class="menu-icon"><a href="#">Services</a>
-								<ul class="submenu">
-									<li><a href="services-1.html"><i class="flaticon-double-right-arrows-angles"></i> Services-1</a>
-									</li>
-									<li><a href="services-2.html"><i class="flaticon-double-right-arrows-angles"></i> Services-2</a>
-									</li>
-								</ul>
+							<li class=""><a href="#Faaliyet">Faaliyet Alanlarımız</a>
+								
 							</li>
-							<li class="menu-icon"><a href="#">Page</a>
-								<ul class="submenu">
-									<li><a href="about.html"><i class="flaticon-double-right-arrows-angles"></i> About Us</a>
-									</li>
-									<li><a href="pricing.html"><i class="flaticon-double-right-arrows-angles"></i> Pricing</a>
-									</li>
-									<li><a href="faq.html"><i class="flaticon-double-right-arrows-angles"></i> FAQ</a>
-									</li>
-									<li><a href="team.html"><i class="flaticon-double-right-arrows-angles"></i> Team</a>
-									</li>
-									<li><a href="testimonial.html"><i class="flaticon-double-right-arrows-angles"></i> Testimonial</a>
-									</li>
-								</ul>
-							</li>
-							<li class="menu-icon"><a href="#">News</a>
-								<ul class="submenu">
-									<li><a href="blog-grid.html"><i class="flaticon-double-right-arrows-angles"></i> Blog Grid</a>
-									</li>
-									<li><a href="blog-details.html"><i class="flaticon-double-right-arrows-angles"></i> Blog Details</a>
-									</li>
-								</ul>
-							</li>
-							<li class="menu-icon"><a href="contact.html">Contact</a>
-							</li>
+							<li class=""><a href="#Hakkimizda">Hakkımızda</a></li>
+						 
+							<li class=""><a href="contact">İletişim</a></li>
 						</ul>
-					</div>
-				</div>
-				<div class="col-xl-1 col-lg-1 col-md-3">
-					<div class="menu-icon">
-						<ul class="d-flex">
-							<li><span class="search-icon open"><i class="flaticon-search"></i></span>
-							</li>
-							<li>
-								<div class="hamburger-icon"> <i class="flaticon-menu"></i>
-								</div>
-							</li>
-						</ul>
-					</div>
-					<div class="search-box">
-						<form>
-							<input type="search" placeholder="Search Here.....">
-							<button type="submit"><i class="flaticon-search"></i>
-							</button>
-						</form> <span class="search-box-icon"><i class="flaticon-close"></i></span>
 					</div>
 				</div>
 			</div>
 		</div>
 		<!-- Hamburger Menu Start -->
-		<div class="hamburger-popup">
-			<div class="hamburger-close-btn">	<i class="flaticon-close"></i>
-			</div>
-			<div class="menu-box">
-				<div class="menu-logo">
-					<a href="index.html">
-						<img src="assets/img/logo.png" alt="">
-					</a>
-					<p class="pt-30">Here are many variations of passages onsectetur adipisicing elit. Voluptate, odio cupiditate? Illum, quos eos nihil harum et, id architecto dolore eius dolores culpa eveniet assumenda iusto repudiandae.</p>
-				</div>
-				<div class="contact-info pt-30">
-					<h3 class="mb-25">Contact Info</h3>
-					<div class="contact-box"> <i class="flaticon-call"></i>+(141 - 589 - 548</div>
-					<div class="contact-box">	<i class="flaticon-envelope"></i>infoattoyer@gmail.com</div>
-					<div class="contact-box"> <i class="flaticon-placeholder"></i> 7935 Springs, NY</div>
-				</div>
-				<div class="follow-us pt-30">
-					<h3 class="mb-25">Follow Us</h3>
-					<div class="widget social-icon d-i-block">
-						<ul class="footer-social">
-							<li><a href="#"><i class="flaticon-facebook-app-symbol"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-twitter"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-instagram"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-vimeo"></i></a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="hamburger-overlay"></div>
+		
 		<!-- Hamburger Menu Start -->
 	</div>
 	<!-- Header Menu End -->
@@ -163,11 +66,9 @@
 			<div class="row">
 				<div class="col-xl-12">
 					<div class="page-title">
-						<h1 class="pb-30">Contact Us</h1>
+						<h1 class="pb-30">Bizimle İletişime Geçin</h1>
 						<ul>
-							<li><a href="#">Hone</a>
-							</li>
-							<li><a href="#">Contact</a>
+							<li><a href="#Ulasin">İletişim</a>
 							</li>
 						</ul>
 					</div>
@@ -182,23 +83,23 @@
 			<div class="row">
 				<div class="col-xl-4 col-lg-4 col-md-6 md-mb-30">
 					<div class="contact-item">	<i class="flaticon-placeholder"></i>
-						<h3 class="pt-20 pb-20">Location</h3>
-						<p>7935 Colorado Springs, NY</p>
-						<p>7011 Budapast, Harry, WT</p>
+						<h3 class="pt-20 pb-20">Konum</h3>
+						<p>Ömerağa Mah. Beyazhan İşhanı No: 43 </p>
+						<p>İzmit Kocaeli</p>
 					</div>
 				</div>
 				<div class="col-xl-4 col-lg-4 col-md-6 sm-mb-30">
 					<div class="contact-item">	<i class="flaticon-envelope"></i>
 						<h3 class="pt-20 pb-20">Email</h3>
-						<p>infoattoyer@gmail.com</p>
-						<p>attoyer@arcoder.com</p>
+						<p>safahukuk@yahoo.com</p>
+						
 					</div>
 				</div>
 				<div class="col-xl-4 col-lg-4 col-md-6">
 					<div class="contact-item">	<i class="flaticon-call"></i>
-						<h3 class="pt-20 pb-20">Phone Number</h3>
-						<p>+(151 - 589 - 548</p>
-						<p>+(141 - 599 - 048</p>
+						<h3 class="pt-20 pb-20">Telefon Numarası</h3>
+						<p>0537 329 3216</p>
+						<p>0541 540 9232</p>
 					</div>
 				</div>
 			</div>
@@ -207,36 +108,36 @@
 	<!-- Contact Details End -->
 	<!-- Contact Area Start -->
 	<div class="contact-area section-padding">
-		<div class="contact-right"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-xl-6 col-lg-6">
-					<div class="section-title-left"> <span class="section-top">//  Free Quote</span>
-						<h2 class="fff mb-60">Get a free Consultation</h2>
-						<div class="from-area">
-							<form>
-								<div class="form-row">
-									<div class="form-group col-md-6">
-										<input type="text" class="form-control" id="fullName" placeholder="Name">
-									</div>
-									<div class="form-group col-md-6">
-										<input type="email" class="form-control" id="email" placeholder="Email">
-									</div>
-								</div>
-								<div class="form-group">
-									<input type="text" class="form-control" id="subject" placeholder="Subject">
-								</div>
-								<div class="form-group">
-									<textarea class="form-control" id="message" rows="2" placeholder="Message"></textarea>
-								</div>
-								<button type="submit" class="attoyer-btn">Send Massage</button>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+        <div class="contact-right"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6 col-lg-6">
+                    <div class="section-title-left"> <span class="section-top">Bize Ulaşın</span>
+                        <h2 class="fff mb-60">Ücretsiz Danışmanlık</h2>
+                        <div class="from-area">
+                            <form>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <input type="text" class="form-control" id="fullName" placeholder="İsim">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <input type="email" class="form-control" id="email" placeholder="Email">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="subject" placeholder="Konu">
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-control" id="message" rows="2" placeholder="Mesaj"></textarea>
+                                </div>
+                                <button type="submit" class="attoyer-btn">Mesajı Gönder</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 	<!-- Contact Area End -->
 	<!-- Map Area Start -->
 	<div class="contact-map">
