--- a/hukuki/src/app/contact/contact.component.html
+++ b/hukuki/src/app/contact/contact.component.html
@@ -151,7 +151,7 @@
 				<div class="subscribe-shape"></div>
 				<div class="col-lg-5">
 					<div class="subscribe-left md-mb-25">
-						<h3>Subscribe now to Stay with Us</h3>
+						<h3>Subscribe now to Stay with Us 31</h3>
 					</div>
 				</div>
 				<div class="col-lg-7">
