contact sayfa son hali

--- a/hukuki/src/app/contact/contact.component.html
+++ b/hukuki/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 
 
-    
+
 <body>
 	<!-- Preloader start -->
 	<!-- <div class="theme-loader">
@@ -19,11 +19,11 @@
 						<ul>
 							<li><a href="#"><i class=""></i></a>Ömerağa Mah. Alemdar Cad. Beyazhan İşhanı No:43 İzmit Kocaeli</li>
 							<li><a href="#"><i class="flaticon-call"></i></a> 0537 329 3216 / 0541 540 9232</li>
-							<li><a href="#"><i class="flaticon-envelope"></i></a> safahukuk@yahoo.com</li>
+							<li><a href="#"><i class="flaticon-envelope"></i></a> safahukuk22@gmail.com</li>
 						</ul>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 	</div>
@@ -42,13 +42,13 @@
 					<div class="main-menu">
 						<ul id="mobilemenu">
 							<li class=""><a href="#Anasayfa">Anasayfa</a>
-								
+
 							</li>
 							<li class=""><a href="#Faaliyet">Faaliyet Alanlarımız</a>
-								
+
 							</li>
 							<li class=""><a href="#Hakkimizda">Hakkımızda</a></li>
-						 
+
 							<li class=""><a href="contact">İletişim</a></li>
 						</ul>
 					</div>
@@ -56,7 +56,7 @@
 			</div>
 		</div>
 		<!-- Hamburger Menu Start -->
-		
+
 		<!-- Hamburger Menu Start -->
 	</div>
 	<!-- Header Menu End -->
@@ -92,7 +92,7 @@
 					<div class="contact-item">	<i class="flaticon-envelope"></i>
 						<h3 class="pt-20 pb-20">Email</h3>
 						<p>safahukuk@yahoo.com</p>
-						
+
 					</div>
 				</div>
 				<div class="col-xl-4 col-lg-4 col-md-6">
@@ -141,105 +141,31 @@
 	<!-- Contact Area End -->
 	<!-- Map Area Start -->
 	<div class="contact-map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8404599049163!2d144.95373931582537!3d-37.81720574201448!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4c2b349649%3A0xb6899234e561db11!2sEnvato!5e0!3m2!1sen!2sbd!4v1639647690771!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.9380842807795!2d29.927229553339888!3d40.76338650753069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cb457f8529c135%3A0xa9c6c8fb1bbf6a51!2zQmV5YXpoYW4gxLDFnyBNZXJrZXpp!5e0!3m2!1str!2sde!4v1666794970776!5m2!1str!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>
 	<!-- Map Area End -->
 	<!-- Subscribe Area Start  -->
-	<div class="subscribe-now">
-		<div class="container">
-			<div class="row subscribe-bg align-items-center">
-				<div class="subscribe-shape"></div>
-				<div class="col-lg-5">
-					<div class="subscribe-left md-mb-25">
-						<h3>Subscribe now to Stay with Us 31</h3>
-					</div>
-				</div>
-				<div class="col-lg-7">
-					<div class="subscribe-right">
-						<form class="subscribe-box" action="#">
-							<input class="form-control" placeholder="Email" type="text">
-							<button type="submit" class="subscribe-button">Subscribe Now</button>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Subscribe Area End -->
+  <!-- Subscribe Area End -->
 	<!-- Footer Area Start  -->
 	<div class="footer-area">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-3 col-lg-3 col-md-6 md-mb-30">
 					<div class="footer-widget">
-						<h3>About Us</h3>
+						<h3>Hakkımızda</h3>
 						<div class="widget about-info">
-							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Excepteur sint occaecat</p>
-						</div>
-						<div class="widget social-icon">
-							<ul class="footer-social">
-								<li><a href="#"><i class="flaticon-facebook-app-symbol"></i></a>
-								</li>
-								<li><a href="#"><i class="flaticon-twitter"></i></a>
-								</li>
-								<li><a href="#"><i class="flaticon-instagram"></i></a>
-								</li>
-								<li><a href="#"><i class="flaticon-vimeo"></i></a>
-								</li>
-							</ul>
+							<p>Safa hukuk bürosu olarak tecrübeli kadromuzla hizmetinizdeyiz. 25 yıllık tecrübemiz ve kazanma alışkanlığımızın yanı sıra kaliteli hizmeti uygun fiyatlandırma politikamızla sizlere sunuyoruz.</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-4 col-lg-4 col-md-6">
+				<div class="col-xl-5 col-lg-5 col-md-8">
 					<div class="footer-widget">
-						<h3>Recent Post</h3>
-						<div class="widget blog-widget">
-							<ul>
-								<li>
-									<a href="#">
-										<img src="assets/img/fb-1.png" alt="">
-									</a>
-									<h4><a href="#">Essential for the Construction</a></h4>
-									<i class="flaticon-date"></i><span>12 Jan 2019</span>
-								</li>
-								<li>
-									<a href="#">
-										<img src="assets/img/fb-2.png" alt="">
-									</a>
-									<h4><a href="#">Essential for the Construction</a></h4>
-									<i class="flaticon-date"></i><span>28 Jan 2019</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-2 col-lg-2 col-md-6 sm-mt-30 sm-mb-30">
-					<div class="footer-widget">
-						<h3>Quick Links</h3>
-						<div class="widget footer-menu">
-							<ul>
-								<li><a href="index.html"><i class="flaticon-double-right-arrows-angles"></i> Home</a>
-								</li>
-								<li><a href="about.html"><i class="flaticon-double-right-arrows-angles"></i> About Us</a>
-								</li>
-								<li><a href="services-1.html"><i class="flaticon-double-right-arrows-angles"></i> Services</a>
-								</li>
-								<li><a href="pricing.html"><i class="flaticon-double-right-arrows-angles"></i> Pricing</a>
-								</li>
-								<li><a href="team.html"><i class="flaticon-double-right-arrows-angles"></i> Team</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 col-lg-3 col-md-6">
-					<div class="footer-widget">
-						<h3>Basic Info</h3>
+						<h3>Adresimiz</h3>
 						<div class="widget basic-info">
 							<ul>
-								<li><i class="flaticon-placeholder"></i> 7935 Springs, NY</li>
-								<li><i class="flaticon-call"></i> +(141 - 589 - 548</li>
-								<li><i class="flaticon-envelope"></i> infoattoyer@gmail.com</li>
+								<li><i class="flaticon-placeholder"></i> Ömerağa Mah. Beyazhan İşhanı No:43 İzmit Kocaeli</li>
+								<li><i class="flaticon-call"></i> 0537 329 3216 / 0541 540 9232</li>
+								<li><i class="flaticon-envelope"></i> safahukuk22@gmail.com</li>
 							</ul>
 						</div>
 					</div>
@@ -254,7 +180,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="copyright-content">
-						<p>© 2021. Attoyer All rights reserved</p>
+						<p>© 2022. Safa Hukuk. Tüm Hakları Saklıdır</p>
 					</div>
 				</div>
 			</div>
