--- a/hukuki/src/app/components/home/home.component.css
+++ b/hukuki/src/app/components/home/home.component.css
@@ -707,7 +707,7 @@ Faq CSS
 	padding: 0 30px 30px 30px;
 }
 /*==========================================================================
-Quote Form 
+Quote Form
 ==========================================================================*/
 
 .contact-area {
@@ -1127,7 +1127,7 @@ Pricing CSS
 .box {
 	box-shadow: 0 0 60px #eee;
 }
- 
+
 .pricing-price h4 {
 	font-size: 40px;
 	line-height: 52px;
@@ -1586,11 +1586,14 @@ Blog Sidebar CSS
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 100%;   
+    height: 100%;
 }
 
 .card-text-style {
 	font-weight:bold;
 	color: white;
-	 
+
+}
+.scroll{
+  scroll-behavior: smooth;
 }
