--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 
 	<!-- Preloader start -->
 
-<!-- 
+<!--
 	<div class="theme-loader">
 		<div class="spinner">
 			<div class="double-bounce1"></div>
@@ -13,9 +13,9 @@
 
 	<!-- Preloader end -->
 
- 
+
 	<!-- Top Bar Start -->
- 
+
 
 	<div class="top-bar">
 		<div class="container">
@@ -25,11 +25,11 @@
 						<ul>
 							<li><a href="#"><i class=""></i></a>Ömerağa Mah. Alemdar Cad. Beyazhan İşhanı No:43 İzmit Kocaeli</li>
 							<li><a href="#"><i class="flaticon-call"></i></a> 0537 329 3216 / 0541 540 9232</li>
-							<li><a href="#"><i class="flaticon-envelope"></i></a> safahukuk@yahoo.com</li>
+							<li><a href="#"><i class="flaticon-envelope"></i></a> safahukuk22@gmail.com</li>
 						</ul>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 	</div>
@@ -45,35 +45,35 @@
 					<div class="responsive-menu"></div>
 				</div>
 				<div class="col-xl-9 col-lg-7 col-md-3">
-					<div class="main-menu">
+					<div class="main-menu ">
 						<ul id="mobilemenu">
 							<li class=""><a href="#Anasayfa">Anasayfa</a>
-								
+
 							</li>
-							<li class=""><a href="#Faaliyet">Faaliyet Alanlarımız</a>
-								
+							<li class=><a href="#Faaliyet" >Faaliyet Alanlarımız</a>
+
 							</li>
 							<li class=""><a href="#Hakkimizda">Hakkımızda</a></li>
-						 
+
 							<li class=""><a href="contact">İletişim</a></li>
 						</ul>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
-	
+
 	</div>
 	<!-- Header Menu End -->
 
- 
-	
+
+
 
 	<!-- Banner Area Start -->
 	<div class="banner-area banner-group">
-		
+
   <owl-carousel-o [options]="customOptions">
-    <ng-template carouselSlide>   
+    <ng-template carouselSlide>
 			<img src="../../../assets/img/banner-2.png" alt="this is the first alt">
 			<div class="text-block">
 				<h4></h4>
@@ -81,17 +81,17 @@
 			</div>
 
 		</ng-template>
-				 
-    <ng-template carouselSlide> 
+
+    <ng-template carouselSlide>
 			<img src="../../../assets/img/main-slider3.jpeg"
-			alt="this is the first al"> 
+			alt="this is the first al">
 
 		</ng-template>
-		<ng-template carouselSlide> 
+		<ng-template carouselSlide>
 			<img src="../../../assets/img/banner-2.png" alt="this is the first alt" >
-			 
 
-		</ng-template>  
+
+		</ng-template>
   </owl-carousel-o>
 
 
@@ -101,7 +101,7 @@
     <ng-container *ngFor="let slide of slidesStore">
       <ng-template carouselSlide [id]="slide.id">
         <img [src]="slide.src"   [title]="slide.title"
-				
+
 				>
       </ng-template>
     </ng-container>
@@ -114,8 +114,8 @@
 
 
 
-   
-		 
+
+
 	</div>
 	<!-- Banner Area End -->
 	<!-- About Area Start -->
@@ -148,7 +148,7 @@
 								<div class="about-buttom d-sm-flex">
 									<div class="about-btn"> <a class="attoyer-btn all-btn mr-100" href="#Ulasin">Bize Ulaşın</a>
 									</div>
-									
+
 								</div>
 							</div>
 						</div>
@@ -201,22 +201,22 @@
 	<div class="row card-row-size">
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/aile.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/aile.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
-						 
+
 					<h4 class="card-text-style" style="color: white">
 						Aile Hukuku
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/ceza.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/ceza.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -225,12 +225,12 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
-		
+
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/dernekler.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/dernekler.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -239,13 +239,13 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 	</div>
 	<div class="row card-row-size">
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/sirketler.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/sirketler.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -254,12 +254,12 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/gayri.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/gayri.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -268,12 +268,12 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
-		
+
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/insaat.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/insaat.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -282,13 +282,13 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 	</div>
 	<div class="row card-row-size">
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/borclar.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/borclar.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -297,12 +297,12 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/isvesosyal.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/isvesosyal.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -311,12 +311,12 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
-		
+
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/isvesosyal.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/isvesosyal.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -325,13 +325,13 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 	</div>
 	<div class="row card-row-size">
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/icra.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/icra.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -340,12 +340,12 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/yabancilar.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/yabancilar.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -354,12 +354,12 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
-		
+
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/tuketici.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/tuketici.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -368,14 +368,14 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 	</div>
 
 	<div class="row card-row-size">
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/idari.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/idari.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -384,12 +384,12 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/vergi.jpeg" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/vergi.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -398,11 +398,11 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -411,7 +411,7 @@
 					</h4>
 				  </div>
 				  </div>
-			</div>	 	
+			</div>
 		</div>
 	</div>
  </div>
@@ -419,7 +419,7 @@
 
 
 
-<!-- 
+<!--
 
 		<div class="container">
 			<div class="row align-items-center">
@@ -448,7 +448,7 @@
 								<img src="assets/img/services-3.png" alt="">
 							</div>
 							<div class="services-content">
-								<h3 class="pt-20">Crime Law</h3>								
+								<h3 class="pt-20">Crime Law</h3>
 								<p class="pb-10 pt-10">Here are many variations of passages consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore</p> <a href="#">Read More <i class="flaticon-right-arrow"></i></a>
 							</div>
 						</div>
@@ -468,7 +468,7 @@
 				<div class="col-xl-12 col-lg-12 col-md-15 md-mb-30">
 					<h1 style="color: white;">Sizin için burdayız. Kaliteli hizmet için hemen bize ulaşın!</h1>
 				</div>
-				
+
 			</div>
 		</div>
 	</div>
@@ -536,13 +536,13 @@
 	</div>
 	<!-- Why Choose Ua Area Area End -->
 	<!-- Team Area Start -->
-	 
+
 	<!-- Team Area End -->
-	
-	
- 
+
+
+
 	<!-- Contact Area Start -->
-	
+
 	<div class="contact-area section-padding">
 		<div class="contact-right"></div>
 		<div class="container">
@@ -575,10 +575,10 @@
 		</div>
 	</div>
 	<!-- Contact Area End -->
-	
 
- 
- 
+
+
+
 	<!-- Copyright Area Start -->
 	<div class="footer-copyright">
 		<div class="container">
@@ -601,7 +601,7 @@
 	<!-- scroll_up_btn end -->
 	<!-- Main JS -->
 	<script src="../../../assets/js/jquery-1.12.4.min.js"></script>
-   
+
 	<!-- Bootstrap JS -->
 	<script src="../../../assets/js/bootstrap.min.js"></script>
 	<!-- Popper JS -->
