--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -47,7 +47,7 @@
 				<div class="col-xl-9 col-lg-7 col-md-3">
 					<div class="main-menu ">
 						<ul id="mobilemenu">
-							<li class=""><a href="#Anasayfa">Anasayfa</a>
+							<li class=""><a href="/">Anasayfa</a>
 
 							</li>
 							<li class=><a href="#Faaliyet" >Faaliyet Alanlarımız</a>
@@ -402,7 +402,7 @@
 		</div>
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<img class="card-img-top image-size" src="../../../assets/img/blog-7.png" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
