--- a/hukuki/src/app/contact/contact.component.html
+++ b/hukuki/src/app/contact/contact.component.html
@@ -41,7 +41,7 @@
 				<div class="col-xl-9 col-lg-7 col-md-3">
 					<div class="main-menu">
 						<ul id="mobilemenu">
-							<li class=""><a href="#Anasayfa">Anasayfa</a>
+							<li class=""><a href="/">Anasayfa</a>
 
 							</li>
 							<li class=""><a href="#Faaliyet">Faaliyet Alanlarımız</a>
@@ -150,7 +150,7 @@
 	<div class="footer-area">
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-3 col-lg-3 col-md-6 md-mb-30">
+				<div class="col-xl-6 col-lg-6 col-md-9 md-mb-30">
 					<div class="footer-widget">
 						<h3>Hakkımızda</h3>
 						<div class="widget about-info">
