--- a/hukuki/src/app/contact/contact.component.css
+++ b/hukuki/src/app/contact/contact.component.css
@@ -737,7 +737,7 @@ Quote Form
 	position: relative;
 }
 .contact-right {
-	background-image: url('../../assets/img/contact.png');
+	background-image: url('../../assets/img/services-5.png');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: right center;
