home foto degisti

--- a/hukuki/src/app/components/home/home.component.css
+++ b/hukuki/src/app/components/home/home.component.css
@@ -722,7 +722,7 @@ Quote Form
 	position: relative;
 }
 .contact-right {
-	background-image: url('./../../../assets/img/contact.png');
+	background-image: url('./../../../assets/img/services-5.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: right center;
