--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -50,10 +50,10 @@
 							<li class=""><a href="/">Anasayfa</a>
 
 							</li>
-							<li class=><a href="#Faaliyet" >Faaliyet Alanlarımız</a>
+							<li class=""><a href="#Faaliyet" >Faaliyet Alanlarımız</a>
 
 							</li>
-							<li class=""><a href="#Hakkimizda">Hakkımızda</a></li>
+							<li class=""><a href="#Hakkimizda" >Hakkımızda</a></li>
 
 							<li class=""><a href="contact">İletişim</a></li>
 						</ul>
@@ -65,58 +65,21 @@
 
 	</div>
 	<!-- Header Menu End -->
+	<div class="bannersami">
+			<img src="../../../assets/img/banner34.jpg" alt="this is the first al">
+				<h1 class="bannertextsami">Hızlı ve Güvenilir Hizmetimizle Daima Yanınızdayız.</h1>
+				<div class="about-buttom d-sm-flex">
+					<div class="about-btn faaliyetsami "> <a class="attoyer-btn all-btn mr-100" href="#Faaliyet" >Faaliyet Alanlarımız</a>
+					</div>
 
-
-
-
-	<!-- Banner Area Start -->
-	<div class="banner-area banner-group">
-
-  <owl-carousel-o [options]="customOptions">
-    <ng-template carouselSlide>
-			<img src="../../../assets/img/banner-2.png" alt="this is the first alt">
-			<div class="text-block">
-				<h4></h4>
-				<p></p>
-			</div>
-
-		</ng-template>
-
-    <ng-template carouselSlide>
-			<img src="../../../assets/img/main-slider3.jpeg"
-			alt="this is the first al">
-
-		</ng-template>
-		<ng-template carouselSlide>
-			<img src="../../../assets/img/banner-2.png" alt="this is the first alt" >
-
-
-		</ng-template>
-  </owl-carousel-o>
-
-
-	<!-- <div>Some tags before</div>
-  <owl-carousel-o [options]="customOptions">
-
-    <ng-container *ngFor="let slide of slidesStore">
-      <ng-template carouselSlide [id]="slide.id">
-        <img [src]="slide.src"   [title]="slide.title"
-
-				>
-      </ng-template>
-    </ng-container>
-
-  </owl-carousel-o>
-  <div>Some tags after</div> -->
-
-
-
-
-
-
-
-
+				</div>
+				
 	</div>
+		
+
+
+
+
 	<!-- Banner Area End -->
 	<!-- About Area Start -->
 	<div class="about-area section-padding">
