tekrar eden resim degistirildi

--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -72,7 +72,7 @@
 	<!-- Banner Area Start -->
 	<div class="banner-area banner-group">
 
-  <owl-carousel-o [options]="customOptions">
+  <!-- <owl-carousel-o [options]="customOptions">
     <ng-template carouselSlide>
 			<img src="../../../assets/img/banner-2.png" alt="this is the first alt">
 			<div class="text-block">
@@ -92,7 +92,9 @@
 
 
 		</ng-template>
-  </owl-carousel-o>
+  </owl-carousel-o> -->
+
+  <img src="../../../assets/img/main-slider3.jpeg">
 
 
 	<!-- <div>Some tags before</div>
@@ -256,7 +258,19 @@
 				  </div>
 			</div>
 		</div>
-
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/blog-7.png" alt="Card image cap"  >
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Danismanlik Hizmeti
+					</h4>
+				  </div>
+				  </div>
+			</div>
+		</div>
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/gayri.jpeg" alt="Card image cap"  >
@@ -271,19 +285,7 @@
 			</div>
 		</div>
 
-		<div class="col-md ">
-			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/insaat.jpeg" alt="Card image cap"  >
-				<div class="card-img-overlay">
-					<h5 class="card-title"></h5>
-					<div class="card-footer text-center">
-					<h4 class="card-text-style"  >
-						Kooperatif ve İnşaat Hukuku
-					</h4>
-				  </div>
-				  </div>
-			</div>
-		</div>
+		
 	</div>
 	<div class="row card-row-size">
 		<div class="col-md ">
@@ -302,7 +304,7 @@
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/isvesosyal.jpeg" alt="Card image cap"  >
+				<img class="card-img-top image-size" src="../../../assets/img/kamulastirma.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -373,6 +375,21 @@
 	</div>
 
 	<div class="row card-row-size">
+
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/insaat.jpeg" alt="Card image cap"  >
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style"  >
+						Kooperatif ve İnşaat Hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>
+		</div>
+
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/idari.jpeg" alt="Card image cap"  >
@@ -387,6 +404,9 @@
 			</div>
 		</div>
 
+		
+
+
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/vergi.jpeg" alt="Card image cap"  >
@@ -400,19 +420,7 @@
 				  </div>
 			</div>
 		</div>
-		<div class="col-md ">
-			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/blog-7.png" alt="Card image cap"  >
-				<div class="card-img-overlay">
-					<h5 class="card-title"></h5>
-					<div class="card-footer text-center">
-					<h4 class="card-text-style">
-						Danismanlik Hizmeti
-					</h4>
-				  </div>
-				  </div>
-			</div>
-		</div>
+		
 	</div>
  </div>
 
