--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -544,7 +544,7 @@
 		</div>
 	</div>
 	<!-- Contact Area End -->
-	<div id="popup1" class="overlay">
+	<!-- <div id="popup1" class="overlay">
 		<div class="popup">
 			<h2>Here i am</h2>
 			<a class="close" href="#">&times;</a>
@@ -552,7 +552,7 @@
 				Thank to pop me out of that button, but now i'm done so you can close this window.
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 
