--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -520,24 +520,27 @@
 					<div class="section-title-left"> <a name="Ulasin"><span class="section-top">Bize Ulaşın</span></a>
 						<h2 class="mb-60">Ücretsiz Danışmanlık </h2>
 						<div class="from-area">
-							<form  method="POST" target="_blank">
-								<div class="form-row">
-									<div class="form-group col-md-6">
-										<input type="text"   class="form-control" id="fullName" name="name" placeholder="İsim" required>
+                            <form ngNoForm [action]="url" method="POST" target="_blank" >
+								<input type="hidden" name="_captcha" value="false">
+								<input type="hidden" name="_next" value="http://localhost:4200/contact">
+									<div class="form-row">
+										<div class="form-group col-md-6">
+											<input name="isim" type="text" class="form-control" id="fullName" placeholder="İsim" required oninvalid="this.setCustomValidity('Lutfen Adinizi giriniz')" >
+										</div>
+										<div class="form-group col-md-6">
+											<input name="email" type="text" class="form-control" id="email" placeholder="Email" required oninvalid="this.setCustomValidity('Gecerli bir Email formati giriniz')">
+										</div>
 									</div>
-									<div class="form-group col-md-6">
-										<input type="email"    class="form-control" id="email" name="email" placeholder="Email" required>
+									<div class="form-group">
+										<input type="text" name="konu" class="form-control" id="subject" placeholder="Konu" required oninvalid="this.setCustomValidity('Lutfen konu giriniz')" >
 									</div>
-								</div>
-								<div class="form-group">
-									<input type="text"   class="form-control" id="subject" name="subject" placeholder="Konu" required>
-								</div>
-								<div class="form-group">
-									<textarea class="form-control" id="message" rows="2" name="message" placeholder="Mesaj" required></textarea>
-								</div>
-								<button type="submit" class="attoyer-btn" href="#popup1">Mesajı Gönder</button>
-							</form>
-						</div>
+									<div class="form-group">
+										<textarea class="form-control" name="mesaj" id="message" rows="2" placeholder="Mesaj" required oninvalid="this.setCustomValidity('Lutfen mesajinizi yaziniz')"></textarea>
+									</div>
+								 
+                                	<button type="submit" class="attoyer-btn">Mesajı Gönder</button>
+                            </form>
+                        </div>
 					</div>
 				</div>
 			</div>
